# Budgetory_Backend

./: .dockerignore  .env_example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  conftest.py  docker-compose-tests.yaml  docker-compose.yaml  dynaconf_validators.toml  entrypoint.sh  pyproject.toml  pytest.ini  render.yaml  requirements.txt  settings.yaml
.github/workflows/: main.yml  tests.yml
backend/: .flake8  .pre-commit-config.yaml  code_quality.ps1  conftest.py  pyproject.toml  settings.yaml
backend/app_config/: exception_handlers.py  permissions.py  settings.py  urls.py  viewsets.py
backend/app_users/: models.py
backend/budgets/: admin.py  models.py  serializers.py  urls.py  views.py
backend/categories/: admin.py  filters.py  serializers.py  views.py
backend/deposits/: admin.py  serializers.py  views.py
backend/docker/: Dockerfile
backend/entities/: admin.py  managers.py  models.py  permissions.py  serializers.py  views.py
backend/predictions/: filters.py  models.py  serializers.py  views.py
backend/src/: example_data.json  test_data.json
backend/tests/: conftest.py
backend/wiki/: PROJECT_STRUCTURE.md
budget_api/: conftest.py
budget_api/app_config/: asgi.py  permissions.py  settings.py  swagger_schemas.py  urls.py  wsgi.py
budget_api/app_users/: admin.py  managers.py  serializers.py  urls.py  views.py
budget_api/budgets/: admin.py  mixins.py  models.py  serializers.py  urls.py  views.py
budget_api/categories/: models.py  serializers.py
budget_api/data_import/: serializers.py  views.py
budget_api/deposits/: admin.py  models.py  serializers.py  urls.py  views.py
budget_api/entities/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
budget_api/periods/: admin.py  models.py  serializers.py  urls.py  views.py
budget_api/transfers/: admin.py  budget_defaults.py  filters.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
budget_api/users/: urls.py  views.py
budget_manager/: conftest.py  factories.py  manage.py  pytest.ini
budget_manager/api/: urls.py
budget_manager/app_config/: asgi.py  settings.py  urls.py  wsgi.py
budget_manager/budget_manager/: settings.py  urls.py
budget_manager/data_import/: models.py  serializers.py  urls.py  views.py
budget_manager/templates/: base.html  home.html  (+1 more)
docker/: Dockerfile  entrypoint.sh
docs/: PROJECT_STRUCTURE.md  WIKI.md
src/: test_data.json  tester_data.json
tests/: conftest.py
wiki/: PROJECT_STRUCTURE.md
(+536 files in other folders)
